--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   <body>
     <div id="root" />
     <script src="./bundle.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/index.css" />
   </body>
 </html>
